<resources>
    <string name="app_name">Protean</string>
    <string name="navigation_drawer_open">打开抽屉式导航栏</string>
    <string name="navigation_drawer_close">关闭抽屉式导航栏</string>
    <string name="nav_header_title">Protean</string>
    <string name="nav_header_subtitle">仅提供学习与交流，请3小时内删除</string>
    <string name="nav_header_desc">导航栏头部</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_info">信息</string>

    <string name="menu_home">主页</string>
    <string name="menu_mock">位置模拟</string>
    <string name="menu_route_mock">路线模拟</string>
    <string name="menu_gnss_mock">GNSS 模拟</string>
    <string name="menu_route_mock_edit">路线模拟编辑</string>
    <string name="menu_setting">设置</string>
    <string name="request_permission">能否给我一个权限呢？</string>
    <string name="follow_location">镜头跟随</string>
    <string name="add_route">创建路线</string>
    <string name="normal_view">普通图</string>
    <string name="satellite_view">卫星图</string>
    <string name="loc_detail_text">逆地理编码，根据经纬度获取地址信息</string>
    <string name="latlon">经纬度</string>
    <string name="route_set">路线经纬度</string>
    <string name="address">地址</string>
    <string name="input_lat">请输入纬度</string>
    <string name="input_lon">请输入经度</string>
    <string name="target_location">目标位置</string>
    <string name="target_route">实行路线</string>
    <string name="none">请选择一个位置</string>
    <string name="none_route">请选择一个路线</string>
    <string name="none_none">未知地址</string>
    <string name="latlon_display">经纬度：</string>
    <string name="default_latlon">0.00, 0.00</string>
    <string name="start_mock">启动模拟</string>
    <string name="rocker">移动摇杆</string>
    <string name="map_source">地图源</string>
    <string name="map_source_desc">底图瓦片来源，换源后返回地图生效</string>
    <string name="history_location">历史位置</string>
    <string name="history_route">历史路线</string>
    <string name="goto_location">跳转位置</string>
    <string name="save_location">保存位置</string>
    <string name="add_location">添加位置</string>
    <string name="name">名称</string>
    <string name="colorful">独属于我的蒙娜丽莎</string>
    <string name="rocker_speed">摇杆速度</string>
    <string name="default_speed">1m/s</string>
    <string name="selinux">SELinux</string>
    <string name="need_open_selinux">是否开启SELinux</string>
    <string name="altitude">定位海拔</string>
    <string name="altitude_desc">模拟定位的海拔高度</string>
    <string name="rocker_speed_desc">模拟移动的移动速度</string>
    <string name="accuracy">定位精度</string>
    <string name="accuracy_desc">模拟定位抖动的范围</string>
    <string name="debug">调试模式</string>
    <string name="debug_desc">是否打印调试日志</string>
    <string name="dgc">允许获取当前位置（新）</string>
    <string name="dgc_desc">是否允许调用GetCurrentLocation</string>
    <string name="rll">允许注册位置监听器</string>
    <string name="rll_desc">是否允许应用注册位置监听器</string>
    <string name="dfused">禁用融合定位</string>
    <string name="dfused_desc">是否禁用融合定位</string>
    <string name="cdma">网络降级</string>
    <string name="cdma_desc">将网络降级为CDMA</string>
    <string name="hook_sensor">传感器劫持</string>
    <string name="hook_sensor_desc">模拟步频（待完善）</string>
    <string name="wifi_mock">禁用 WiFi 扫描列表</string>
    <string name="loop_broadcast">反定位拉回</string>
    <string name="loop_broadcast_desc">解决位置拉回问题 可能导致发热</string>
    <string name="agps_module">启用AGPS模块（部分机型需要开启才能模拟）</string>
    <string name="wifi_mock_desc">防止应用用 WiFi 定位把模拟位置拉回真实位置（建议开启）</string>
    <string name="show_route">显示路线</string>
    <string name="item_report_duration_title">位置上报间隔</string>
    <string name="item_report_duration_desc">上报位置的频率单位毫秒(ms)</string>
    <string name="item_report_duration_value">100ms</string>
    <string name="gnss_mock">GNSS 模拟</string>
    <string name="satellites_info">星图信息</string>
    <string name="zero">0 G</string>
    <string name="in_view_left_item">可用卫星数量</string>
    <string name="in_use_satellite">在用卫星数量</string>
</resources>